<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MADfinal</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_bmsce_events">Welcome to BMSCE Events!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="event_feed">EVENT FEED</string>
    <string name="pranav_kulkarni">Pranav Kulkarni</string>
    <string name="student_ise">Student, ISE</string>
    <string name="more">TODO</string>
    <string name="sample_event">Sample Event</string>
    <string name="post">Post</string>
    <string name="create_password">Create Password</string>
    <string name="add_e_mail">Add E-mail</string>
    <string name="select_if_you_re_a_teacher">Select if you\'re a teacher</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="LogOut" />
    <string name="fragment_2">Fragment 2</string>
    <string name="bold" tools:ignore="ReferenceType">@font/robotobold</string>
    <string name="light" tools:ignore="ReferenceType">@font/robotolight</string>
    <string name="regular" tools:ignore="ReferenceType">@font/robotoregular</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>