<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/r1header"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/img" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="250dp"
        android:layout_height="482dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shape_right_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r1header"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Registration"

            android:textColor="#030303"

            android:textColorHighlight="@color/LightSteelBlue"
            android:textSize="28sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LoginPanel"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/r1header"
        android:layout_width="match_parent"
        android:background="@drawable/shape_login"
        android:layout_height="375dp"
        android:layout_marginRight="30dp"
        android:paddingTop="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/mNameET"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />

        <EditText
            android:id="@+id/mEmailET"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/add_e_mail"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/mPasswordET"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            tools:ignore="InvalidId" />

        <RadioButton
            android:id="@+id/mRadiobBtn"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:hint="@string/select_if_you_re_a_teacher"
            tools:ignore="TouchTargetSizeCheck" />





    </LinearLayout>

    <Button
        android:id="@+id/mRegisterBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/LoginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@null"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
